# sound-compose

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
assets/html/: minimal.html
assets/wav/test/: memo.txt
ffi/: main_static.c  memo.txt
src/: lib.rs  main.rs
src/common/: AppError.rs  mod.rs
src/internal/apps/: mod.rs
src/internal/apps/cli/: mod.rs
src/internal/apps/cli/common/: args.rs  mod.rs  yaml.rs
src/internal/apps/cli/subcommand/: debug.rs  gui.rs  mod.rs  opengl.rs
src/internal/apps/gui/: mod.rs
