[package]
name = "sound-compose"
version = "0.1.0"
authors = ["sohrin"]
edition = "2018"

[lib]
name = "sound_compose_lib"
path = "src/lib.rs"

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_yaml = "0.8.12"
structopt = "0.3.14"
sdl2 = "0.32.2"
find_folder = "0.3.0"

[dependencies.conrod]
version = "0.53.0"
features = ["glium", "winit"]