[package]
name = "sound-compose"
version = "0.1.0"
authors = ["sohrin"]
edition = "2018"
build = "build.rs"

[lib]
name = "sound_compose_lib"
path = "src/lib.rs"
# MEMO: C言語からの動的リンク呼び出し（ffiフォルダ参照）を実験したい場合はコメントアウトを外すこと。
#crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_yaml = "0.8.12"
structopt = "0.3.14"
sdl2 = "0.32.2"
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"